--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -26,10 +26,16 @@
             android:title="@string/pref_confselect_title"
             android:persistent="true"></ListPreference>
     </PreferenceCategory>
-    <!--<PreferenceScreen
+    <PreferenceScreen
         android:key="pref_scr_device"
         android:persistent="false"
-        android:title="" />-->
+        android:title="888888888">
+        <PreferenceCategory android:key="pref_cat_devicesettings" android:title="Ciao ciao">
+            <Preference
+                android:key="pref_temp_dir2"
+                android:title="Puppe" />
+        </PreferenceCategory>
+    </PreferenceScreen>
     <!--
          android:entries="@array/pref_syncConnectionTypes_entries"
         android:entryValues="@array/pref_syncConnectionTypes_values"
