Migliorata detection della pausa nel simulatore bluesc e aggiornate le macro velocity di default

--- a/app/src/main/res/raw/macros_workout.vm
+++ b/app/src/main/res/raw/macros_workout.vm
@@ -1,14 +1,35 @@
-#macro(speed $D $str2)
-	#if (!$D || !$D.upd_speed)
+#macro(speed0 $v $vmn $str2)
+	#if (!$v)
 		#set($speed_class = '"error"')
 		<tr><td class="info">Vel (M): </td><td class="error"><span class=$speed_class>-</span> (-)</td></tr>
 	#else
-		#if($D.upd_speed.c($D.upd_speedmn)<0)
+		#if($v.c($vmn)<0)
 		    #set($speed_class = '"warning"')
 		#else
 		    #set($speed_class = '"success"')
 		#end
-		<tr><td class="info">Vel (M): </td><td class="info2"><span class=$speed_class>$D.upd_speed.toString("%.1f")</span> ($D.upd_speedmn.toString("%.2f"))</td></tr>
+		<tr><td class="info">Vel (M): </td><td class="info2"><span class=$speed_class>$v.toString("%.1f")</span> ($vmn.toString("%.2f"))</td></tr>
+	#end
+#end
+#macro(speedwheel $D $str2)
+	#if (!$D)
+		#speed0($D $D $str2)
+	#else
+		#speed0($D.get("upd_wheelspeedkmh") $D.get("upd_wheelspeedkmhmn") $str2)
+	#end
+#end
+#macro(speedcrank $D $str2)
+	#if (!$D)
+		#speed0($D $D $str2)
+	#else
+		#speed0($D.get("upd_crankspeedkmh") $D.get("upd_crankspeedkmhmn") $str2)
+	#end
+#end
+#macro(speed $D $str2)
+	#if (!$D)
+		#speed0($D $D $str2)
+	#else
+		#speed0($D.get("upd_speed") $D.get("upd_speedmn") $str2)
 	#end
 #end
 #macro(watt $D $str2)
@@ -24,17 +45,26 @@
 		<tr><td class="info">Watt (M)$str2:</td><td class="info2"><span class=$watt_class>$D.upd_watt</span> ($D.upd_wattmn.toString("%.1f"))</td></tr>
 	#end
 #end
-#macro(rpm $D $str2)
-	#if (!$D || !$D.upd_rpm)
+#macro(rpm0 $v $vmn $str2)
+	#if (!$v)
 		#set($rpm_class = '"error"')
 		<tr><td class="info">RPM (M)$str2:</td><td class="error"><span class=$rpm_class>-</span> (-)</td></tr>
 	#else
-		#if($D.upd_rpm.c($D.upd_rpmmn)<0)
+		#if($v.c($vmn)<0)
 		    #set($rpm_class = '"warning"')
 		#else
 		    #set($rpm_class = '"success"')
 		#end
-		<tr><td class="info">RPM (M)$str2:</td><td class="info2"><span class=$rpm_class>$D.upd_rpm</span> ($D.upd_rpmmn.toString("%.1f"))</td></tr>
+		<tr><td class="info">RPM (M)$str2:</td><td class="info2"><span class=$rpm_class>$v</span> ($vmn.toString("%.1f"))</td></tr>
+	#end
+#end
+#macro(rpm $D $str2)
+	#if (!$D)
+		#rpm0($D $D $str2)
+	#elseif ($D.get("upd_crankspeed") || $D.get("upd_crankspeedmn"))
+		#rpm0($D.get("upd_crankspeed") $D.get("upd_crankspeedmn") $str2)
+	#else
+		#rpm0($D.get("upd_rpm") $D.get("upd_rpmmn") $str2)
 	#end
 #end
 #macro(joule $D $str2)
@@ -77,17 +107,39 @@
 	#end
 #end
 
-#macro(distance $D $str2)
-	#if (!$D || !$D.upd_distancer)
+#macro(distance0 $v $v2 $str2)
+	#if (!$v)
 		#set($timeadd='')
 		<tr><td class="info">Dis$str2:</td><td><span class="error">-</span>$timeadd</td></tr>
 	#else
-		#if($D.upd_distance)
-			#set($timeadd = $String.format("&nbsp;<span class=""info"">(%s)</span>",$D.upd_distance.toString()))
+		#if($v2)
+			#set($timeadd = $String.format("&nbsp;<span class=""info"">(%s)</span>",$v2.toString()))
 		#else
-			#set($timeadd='')			
+			#set($timeadd='')
 		#end
-		<tr><td class="info">Dis$str2:</td><td><span class="info2">$D.upd_distancer</span>$timeadd</td></tr>
+		<tr><td class="info">Dis$str2:</td><td><span class="info2">$v</span>$timeadd</td></tr>
+	#end
+#end
+
+#macro(distancewheel $D $str2)
+	#if (!$D)
+		#distance0($D $D $str2)
+	#else
+		#distance0($D.get("upd_wheeldistance") $D.get("upd_distance") $str2)
+	#end
+#end
+#macro(distancecrank $D $str2)
+	#if (!$D)
+		#distance0($D $D $str2)
+	#else
+		#distance0($D.get("upd_crankdistance") $D.get("upd_distance") $str2)
+	#end
+#end
+#macro(distance $D $str2)
+	#if (!$D)
+		#distance0($D $D $str2)
+	#else
+		#distance0($D.get("upd_distancer") $D.get("upd_distance") $str2)
 	#end
 #end
 
@@ -100,9 +152,14 @@
 #end
 
 #macro(bluescmix $D $MIN $MOUT)
+    #if ($D && $D.get("upd_crankspeed"))
+        #set($cc = 1)
+    #else
+        #set($cc = 0)
+    #end
     #if ($MIN)
         #foreach ($mapEntry in $MIN.entrySet())
-            #if (!$D[$mapEntry.key])
+            #if ( !$D[$mapEntry.key] || ($mapEntry.key=="upd_timer" && $D.get("upd_timer").c($mapEntry.value)<0) )
                 #set($D[$mapEntry.key] = $mapEntry.value)
             #end
         #end
@@ -110,16 +167,19 @@
         #set($MIN = {})
     #end
     #set($MOUT = $MIN)
-    #if ($D.upd_senstype.getInt()==$WSensorType.CRANK.ordinal())
-        #set($MOUT["upd_rpm"] = $D.upd_rpm)
-        #set($MOUT["upd_rpmmn"] = $D.upd_rpmmn)
-        #set($MOUT["upd_crankn"] = $D.upd_crankn)
-        
+    #if ($cc==1)
+		#set($ss = "crank")
     #else
-        #set($MOUT["upd_speed"] = $D.upd_speed)
-        #set($MOUT["upd_speedmn"] = $D.upd_speedmn)
-        #set($MOUT["upd_wheeln"] = $D.upd_wheeln)
+        #set($ss = "wheel")
     #end
+	#set($MOUT["upd_${ss}speed"] = $D.get("upd_${ss}speed"))
+	#set($MOUT["upd_${ss}speedmn"] = $D.get("upd_${ss}speedmn"))
+	#set($MOUT["upd_${ss}distance"] = $D.get("upd_${ss}distance"))
+	#set($MOUT["upd_${ss}calorie"] = $D.get("upd_${ss}calorie"))
+	#set($MOUT["upd_${ss}speedkmh"] = $D.get("upd_${ss}speedkmh"))
+    #set($MOUT["upd_${ss}speedkmhmn"] = $D.get("upd_${ss}speedkmhmn"))
+	#set($MOUT["upd_${ss}n"] = $D.get("upd_${ss}n"))
+    #set($MOUT["upd_timer"] = $D.get("upd_timer"))
     ##set($MOUT["upd_senstype"] = $stype)
     ##set($MOUT["dbg"] = $WSensorType.CRANK.ordinal())
 #end
