--- a/app/src/main/res/raw/wahoobluesc_workout.vm
+++ b/app/src/main/res/raw/wahoobluesc_workout.vm
@@ -4,12 +4,16 @@
 <tr><td class="title" colspan="2">$T.getAlias()</td></tr>
 #bluescmix($D $MIN $MOUT)
 #time($D '')
-#distance($D '')
-#generic($D.upd_calorie 'Cal')
-#speed($D '')
+#distancecrank($D '')
+#distancewheel($D '')
+#generic($D.upd_crankcalorie 'Cal')
+#generic($D.upd_wheelcalorie 'Cal')
+#speedcrank($D '')
+#speedwheel($D '')
 #rpm($D '')
 #generic($D.upd_wheeln 'NWhl')
 #generic($D.upd_crankn 'NCrk')
+#generic($D.upd_gear 'Gear')
 #if ($last__)
 #parse("footer_workout.vm")
 #end
