--- a/app/src/main/res/raw/pafers_workout.vm
+++ b/app/src/main/res/raw/pafers_workout.vm
@@ -3,7 +3,7 @@
 #end
 <tr><td class="title" colspan="2">$T.getAlias()</td></tr>
 #time($D '')
-#distance($D '')
+#distance($D '' $distance1 $distance2)
 #generic($D.upd_calorie 'Cal')
 #generic($D.upd_incline 'Inc')
 #speed($D '')
